--- a/azpipeline.yml
+++ b/azpipeline.yml
@@ -16,7 +16,7 @@ stages:
           - script: ls /automation
           - script: source /home/centos/downloads/env/bin/activate;robot --nostatusrc --variable BROWSER:chrome -x ./**/test-results/xunit.xml -v APPLICATION_HOST:equip.stage.shenzyn.com -v BROWSER:headlesschrome --suitestatlevel 2 --outputdir /automation/Results/$(Build.BuildNumber)/  --include Smoke /automation/testsuites
           - task: PublishHtmlReport@1
-              displayName: 'Publish HTML Report'
+#               displayName: 'Publish HTML Report'
               inputs:
                 reportDir: '/home/SlbWeCare/_work/2/s/Results/$(Build.BuildNumber)/report.html'
 #             inputs:
