--- a/azpipeline.yml
+++ b/azpipeline.yml
@@ -14,7 +14,7 @@ stages:
         steps:
           - script: echo hello
           - script: ls /automation
-          - script: source /home/centos/downloads/env/bin/activate;robot --nostatusrc --variable BROWSER:chrome -x ./**/test-results/xunit.xml -v APPLICATION_HOST:equip.stage.shenzyn.com -v BROWSER:headlesschrome --suitestatlevel 2 --outputdir /automation/Results/$(Build.BuildNumber)/  --include Smoke /automation/testsuites
+          - script: source /home/centos/downloads/env/bin/activate;robot --nostatusrc --variable BROWSER:chrome -x ./**/test-results/xunit.xml -v APPLICATION_HOST:equip.stage.shenzyn.com -v APPLICATION_HOST_API:equip-stage-api.shenzyn.com -v BROWSER:chrome --suitestatlevel 2 --outputdir /automation/Results/$(Build.BuildNumber)/  --include Smoke /automation/testsuites
           - task: PublishPipelineArtifact@1
             inputs:
                 targetPath: '/home/SlbWeCare/_work/2/s/Results/$(Build.BuildNumber)' # Required 
